# jxap

./: .clang-format  .gitignore  CMakeLists.txt  README.md  StableHLO.cmake  TestData.cmake  XLA.cmake
.devcontainer/: Dockerfile  devcontainer.json
jxap/: hlo_opt.cc  hlo_opt.h  mlir_passes.cc  mlir_passes.h  mlir_pipeline.cc  mlir_pipeline.h  mlir_pipeline_test.cc  packaged_plugin.cc  packaged_plugin.h  packaged_plugin_test.cc  pipewire_run.cc  pjrt_plugin_runner.cc  pjrt_plugin_runner.h  pjrt_plugin_runner_test.cc  replace_arg_with_constant_pass.cc  replace_arg_with_constant_pass.h  stablehlo_passes.cc  stablehlo_passes.h  stablehlo_passes_test.cc  utils.cc  utils.h
jxap/mlir/: CMakeLists.txt  passes.cc  passes.h  pipeline.cc  pipeline.h  pipeline_test.cc  utils.cc  utils.h
jxap/pipewire/: CMakeLists.txt  run.cc
jxap/testdata/: loop_plugin.jxap  loop_plugin.jxap-update  plugin.jxap  test_plugin.jxap  test_plugin.jxap-init  test_plugin.jxap-update
plugins/: copy_plugin.jxap  copy_plugin.py  flanger_plugin.jxap  flanger_plugin.py  multiband_eq.jxap  multiband_eq.py  phaser_plugin.jxap  phaser_plugin.py
python/: pyproject.toml  requirements.txt
python/jax_audio_plugins/: __init__.py  export.py  export_test.py  types.py
python/jxap/: __init__.py  decibel.py  delay.py  export.py  export_test.py  test_utils.py  types.py
python/jxap/filters/: __init__.py  linear_time_invariant.py
python/jxap/testing/: __init__.py  test_case.py
